Fixed copy icon alignment

--- a/components/StoryLinks/StoryShareUrl.module.scss
+++ b/components/StoryLinks/StoryShareUrl.module.scss
@@ -16,6 +16,12 @@
 .icon {
     width: $spacing-4;
     height: $spacing-4;
+    margin-top: $spacing-1;
+}
+
+.messageIcon {
+    width: $spacing-4;
+    height: $spacing-4;
     margin-right: $spacing-1;
 }
 
